infra/terraform/compute.tf

data "aws_ami" "amazon-linux-2" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}

# react application server
resource "aws_instance" "react-server" {
  ami                         = data.aws_ami.amazon-linux-2.id
  instance_type               = "t3.micro"
  subnet_id                   = aws_subnet.public.id
  key_name                    = data.aws_key_pair.react-server-ed25519.key_name
  vpc_security_group_ids      = [aws_security_group.frontend.id]
  iam_instance_profile        = aws_iam_instance_profile.react_server_profile.name
  associate_public_ip_address = true

  user_data = <<-EOF
    #!/bin/bash
    # Update system and install dependencies
    sudo yum update -y
    sudo yum install -y docker aws-cli
    
    # Start Docker service
    sudo systemctl enable docker
    sudo systemctl start docker
    sudo usermod -a -G docker ec2-user
    
    # Authenticate with ECR
    sudo aws ecr get-login-password --region ap-south-1 | sudo docker login --username AWS --password-stdin 066777916969.dkr.ecr.ap-south-1.amazonaws.com
    
    # Pull the React frontend image from ECR
    sudo docker pull 066777916969.dkr.ecr.ap-south-1.amazonaws.com/primary:frontend-latest
    
    # Run the React frontend container
    sudo docker run -d \
      --name react-frontend \
      --restart unless-stopped \
      -p 80:80 \
      066777916969.dkr.ecr.ap-south-1.amazonaws.com/primary:frontend-latest
    EOF

  cpu_options {
    core_count       = 1
    threads_per_core = 2
  }

  tags = {
    Name = "react-server"
  }

  depends_on = [aws_instance.fastapi-server]
}

# FastAPI backend server
resource "aws_instance" "fastapi-server" {
  ami                         = data.aws_ami.amazon-linux-2.id
  instance_type               = "t3.micro" # TODO: change to t3.small
  subnet_id                   = aws_subnet.private.id
  key_name                    = data.aws_key_pair.fastapi-server-ed25519.key_name
  vpc_security_group_ids      = [aws_security_group.backend.id]
  iam_instance_profile        = aws_iam_instance_profile.fastapi_server_profile.name
  associate_public_ip_address = false

  user_data = <<-EOF
    #!/bin/bash
    set -euo pipefail

    # Update system and install dependencies
    sudo yum update -y
    sudo yum install -y docker aws-cli
    
    # Start Docker service
    sudo systemctl enable docker
    sudo systemctl start docker
    until sudo systemctl is-active --quiet docker; do sleep 2; done
    sudo usermod -a -G docker ec2-user
    
    # Authenticate with ECR
    sudo aws ecr get-login-password --region ap-south-1 | sudo docker login --username AWS --password-stdin 066777916969.dkr.ecr.ap-south-1.amazonaws.com
    
    # Pull the FastAPI backend image from ECR
    sudo docker pull 066777916969.dkr.ecr.ap-south-1.amazonaws.com/primary:novelwriter-webserver-latest
    
    # Run the FastAPI backend container
    sudo docker run -d \
      --name fastapi-backend \
      --restart unless-stopped \
      -p 7000:7000 \
      066777916969.dkr.ecr.ap-south-1.amazonaws.com/primary:novelwriter-webserver-latest

    # Pull the OTel Collector image from ECR
    sudo docker pull 066777916969.dkr.ecr.ap-south-1.amazonaws.com/primary:otel-collector-latest

    # Run the OTel Collector
    sudo docker run -d \
    --name otel-collector \
    --restart unless-stopped \
    -p 4317:4317 \
    -p 4318:4318 \
    066777916969.dkr.ecr.ap-south-1.amazonaws.com/primary:otel-collector-latest
    EOF

  cpu_options {
    core_count       = 1
    threads_per_core = 2
  }

  tags = {
    Name = "fastapi-server"
  }

  depends_on = [aws_instance.chroma_server]
}

resource "aws_lambda_function" "entity-miner" {
  function_name    = "entity-miner"
  role             = aws_iam_role.entity_miner_lambda_role.arn
  package_type =  "Image"
  image_uri = "066777916969.dkr.ecr.ap-south-1.amazonaws.com/primary@sha256:ecd2975b83b2e7af258805daae437c388ff39232d5dab1c7cfe518633c4f3c20"
  timeout      = 420 # 7 minutes
  memory_size  = 1024 # 1 GB

  vpc_config {
    subnet_ids         = [aws_subnet.private.id]
    security_group_ids = [aws_security_group.backend.id]
  }

  environment {
    variables = {
      OTEL_SERVICE_NAME = "entity-miner"
      OTEL_LOG_LEVEL = "info"
      OTEL_EXPORTER_OTLP_PROTOCOL = "http/protobuf"
      OTEL_EXPORTER_OTLP_ENDPOINT = "http://localhost:4318" # TODO: change to the actual endpoint
    }
  }
} 

resource "aws_lambda_function_event_invoke_config" "entity-miner-s3-file-modified" {
  function_name = aws_lambda_function.entity-miner.function_name
  maximum_retry_attempts = 1
  maximum_event_age_in_seconds = 3600
  qualifier = "$LATEST"
}

resource "aws_lambda_permission" "allow_s3_to_invoke_entity-miner" {
  statement_id  = "AllowS3Invoke"
  action        = "lambda:InvokeFunction"
  function_name = aws_lambda_function.entity-miner.function_name
  principal     = "s3.amazonaws.com"
  source_arn    = aws_s3_bucket.stories.arn
}
